<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_delete_note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:id="@+id/img_delete_note"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_delete_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/img_delete_note"
        android:fontFamily="@font/averia_gruesa_libre"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_delete_note_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_delete_note"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/delete_note_msg"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_delete_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_delete_note_msg"
        android:layout_alignParentEnd="true"
        android:layout_margin="7dp"
        android:fontFamily="@font/averia_gruesa_libre"
        android:includeFontPadding="false"
        android:padding="6dp"
        android:text="@string/delete_note"
        android:textAllCaps="true"
        android:textColor="@color/color_dark1"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_cancel_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_delete_note_msg"
        android:layout_margin="7dp"
        android:layout_toStartOf="@id/text_delete_note"
        android:fontFamily="@font/averia_gruesa_libre"
        android:includeFontPadding="false"
        android:padding="6dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/color_dark3"
        android:textSize="13sp" />

</RelativeLayout>