<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    tools:context=".activities.AddNewNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_save_btn"
                android:fontFamily="@font/averia_gruesa_libre"
                android:padding="7dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_back"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:includeFontPadding="false"
                android:text="@string/current_date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_note_title"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_below="@id/text_date_time"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/averia_gruesa_libre"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="30sp" />

            <View
                android:id="@+id/view_indicator_left"
                android:layout_width="7dp"
                android:layout_height="180dp"
                android:layout_below="@id/input_note_title"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_indicator" />

            <EditText
                android:id="@+id/input_note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_note_title"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/view_indicator_left"
                android:background="@null"
                android:ellipsize="end"
                android:fontFamily="@font/averia_gruesa_libre"
                android:hint="@string/type_your_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_indicator_right"
                android:layout_width="7dp"
                android:layout_height="180dp"
                android:layout_below="@id/input_note_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_indicator" />

        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/bottom_sheet_dialog" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>